src/render/snapshots/mermaid_cli__render__snapshots__idle_empty_80x24.snap
---
source: src/render/snapshots.rs
expression: frame
---
 mermaid v0.0.0 · ollama/test · /project/demo                                   
 /help for commands · shift+tab cycles safety · esc interrupts                  
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
╭──────────────────────────────────────────────────────────────────────────────╮
│ >                                                                            │
╰──────────────────────────────────────────────────────────────────────────────╯
safety: auto · reasoning: medium                                     ollama/test
