src/render/snapshots/mermaid_cli__render__snapshots__mixed_exec_and_agent_turn_80x24.snap
---
source: src/render/snapshots.rs
expression: frame
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
 > run tests and audit in parallel                                              
                                                                                
 ● Bash(cargo test)                                                             
                                                                                
 ◐ Running tools... (esc to interrupt · ctrl+b to background · 9s · ↓ 0 tokens) 
   ◦ Audit deps  starting… · 9s                                                 
╭──────────────────────────────────────────────────────────────────────────────╮
│ >                                                                            │
╰──────────────────────────────────────────────────────────────────────────────╯
safety: auto · reasoning: medium                                     ollama/test
