src/render/snapshots/mermaid_cli__render__snapshots__question_modal_80x24.snap
---
source: src/render/snapshots.rs
expression: frame
---
 > set up the database                                          Today at 3:04am 
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
┌──────────────────────────────────────────────────────────────────────────────┐
│ Database                                                                     │
│Which database should the service use?                                        │
│                                                                              │
│> 1. PostgreSQL                                                               │
│     Relational, battle-tested                                                │
│  2. SQLite                                                                   │
│     Embedded, zero-ops                                                       │
│  3. Type something                                                           │
│                                                                              │
│Notes: press n to add notes                                                   │
│                                                                              │
│Enter to select | Up/Down to navigate | n: notes | c: chat | Esc to cancel    │
└──────────────────────────────────────────────────────────────────────────────┘
