src/render/snapshots/mermaid_cli__render__snapshots__slash_palette_120x40.snap
---
source: src/render/snapshots.rs
expression: frame
---
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
 Enter Command ─────────────────────────────────────────────────────────────────────────────────────────────────────────
> /mo                                                                                                                   
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
┌ Commands (2)  ↑↓ navigate · Tab complete · Esc dismiss ──────────────────────────────────────────────────────────────┐
│ /model [name]          Switch model (auto-pulls if needed) or show current                                           │
│ /model-info <model>    Show provider/model capability information                                                    │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
