src/render/snapshots/mermaid_cli__render__snapshots__slash_palette_80x24.snap
---
source: src/render/snapshots.rs
expression: frame
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
 Enter Command ─────────────────────────────────────────────────────────────────
> /mo                                                                           
────────────────────────────────────────────────────────────────────────────────
┌ Commands (2)  ↑↓ navigate · Tab complete · Esc dismiss ──────────────────────┐
│ /model [name]          Open the model picker, or switch directly with a name │
│ /model-info <model>    Show provider/model capability information            │
└──────────────────────────────────────────────────────────────────────────────┘
